Change Griffiths To Bullets
Change Griffiths To Bullets

--- a/Jack.html
+++ b/Jack.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Jack Griffiths</title>
 <link href='http://fonts.googleapis.com/css?family=Coming+Soon' rel='stylesheet' type='text/css'>
 <link href='animate.css' rel='stylesheet' type='text/css'>
 <style>
